added images for website home page and view basket page (index.html and basket.html)

--- a/application/templates/basket.html
+++ b/application/templates/basket.html
@@ -16,6 +16,8 @@
         {% endfor %}
     </ul>
     <p>Total Price: ${{ total_price }}</p>
+    <img src="../static/ShoppingCart.jpeg" alt="Homepage Image" width="300">
+    <br>
     <a href="{{ url_for('home') }}">Continue Shopping</a>
 </body>
 </html>
