--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -7,7 +7,9 @@
     <title>Shopping</title>
 </head>
 <body>
-    <h1>Products</h1>
+    <h1>Welcome to our Online Store</h1>
+    <img src="../static/ShoppingIcons.jpeg" alt="Homepage Image" width="800">
+    <h2>Featured Products</h2>
     <ul>
         {% for product in products %}
             <li>
