--- a/application/templates/basket.html
+++ b/application/templates/basket.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends "layout2.html" %}
 
 {% block body_content %}
     <h1>Shopping Basket</h1>
@@ -21,7 +21,7 @@
         {% endfor %}
     </ul>
     <p>Total Price: £{{ total_price }}</p>
-    <a href="{{ url_for('home') }}">Continue Shopping</a>
+    <a href="{{ url_for('index') }}">Continue Shopping</a>
     <!-- Checkout button -->
     <form action="{{ url_for('checkout') }}" method="post">
         <button type="submit">Checkout</button>
