--- a/application/static/style.css
+++ b/application/static/style.css
@@ -1,4 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Cinzel:wght@400..900&family=Lemon&display=swap');
 
+
+    .cinzel-font {
+      font-family: 'Cinzel', serif;
+      font-weight: 400; /* Adjust weight as needed */
+    }
 
     html, body {
         font-family: sans-serif;
