--- a/application/templates/home.html
+++ b/application/templates/home.html
@@ -1,15 +1,14 @@
 {% extends "layout2.html" %}
 
 {% block body_content %}
-  <h1>Welcome AY</h1>
+  <h1 class="cinzel-font">Welcome AY</h1>
   <p>Click the button below to start shopping!</p>
   <ul class="nav justify-content-center mt-3">
     <li class="nav-item">
-      <a class="nav-link btn btn-primary" aria-current="page" href="{{ url_for('index') }}">Start Shopping</a>
+      <a class="nav-link btn btn-primary cinzel-font" aria-current="page" href="{{ url_for('index') }}">Start Shopping</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link btn btn-success" href="{{ url_for('view_basket') }}">View Basket</a>
+      <a class="nav-link btn btn-success cinzel-font" href="{{ url_for('view_basket') }}">View Basket</a>
     </li>
   </ul>
 {% endblock %}
-
