--- a/application/templates/home.html
+++ b/application/templates/home.html
@@ -10,5 +10,14 @@
     <li class="nav-item">
       <a class="nav-link btn btn-success cinzel-font" href="{{ url_for('view_basket') }}">View Basket</a>
     </li>
+    {% if session.logged_in %}
+    <li class="nav-item">
+      <a class="nav-link btn btn-info cinzel-font" href="{{ url_for('logout') }}">Logout</a>
+    </li>
+    {% else %}
+    <li class="nav-item">
+      <a class="nav-link btn btn-info cinzel-font" href="{{ url_for('login') }}">Login</a>
+    </li>
+    {% endif %}
   </ul>
 {% endblock %}
