--- a/application/static/style.css
+++ b/application/static/style.css
@@ -82,14 +82,14 @@
         color:  #f9e8e8;
     }
 
-      .btn-login {
+      .btn {
         font-family: "Cinzel", serif;
         background-color: transparent;
         color: Black;
         border: none;
     }
 
-    .btn-login:hover {
+    .btn:hover {
         background-color: rgba(255, 255, 255, 0.1);
         color: #fff;
     }
